--- a/TheCarDealerShip/TheCarDealership/src/main/resources/application.properties
+++ b/TheCarDealerShip/TheCarDealership/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/carDealershipDB?serverTimezone=UTC&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=Tupacw2ts$
+spring.datasource.password=YourPassWord
 
