--- a/TheCarDealerShip/TheCarDealership/src/test/resources/application.properties
+++ b/TheCarDealerShip/TheCarDealership/src/test/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/carDealershipTestDB?serverTimezone=America/Chicago&useSSL=false
 spring.datasource.username=root
-spring.datasource.password=Tupacw2ts$
+spring.datasource.password=YourPassWord
